--- a/home/home.css
+++ b/home/home.css
@@ -26,18 +26,9 @@ body {
     height: 520px;
 }
 
-.img-container-1 img {
-    display: none;
-    width: 100%;
-    height: 500px;
-}
 
-.img-container-2 img {
-    display: none;
-    height: 500px;
-    width: 100%;
-}
-.img-container-3 {
+
+.img-container-3 , .img-container-1 ,.img-container-2,.img-container-4 {
     position: absolute;
     padding: 0;
     margin: 0;
@@ -48,19 +39,36 @@ body {
     box-shadow: 0px 3px 3px  gray;
 
 }
-.img-container-3 img {
+.img-container-4 img {
+    box-sizing: border-box;
+    display: none;
+    width: 100%;
+    height: 500px;
+    margin: 0;
+}
+.img-container-1 img {
+    box-sizing: border-box;
+    display: none;
+    width: 100%;
+    height: 500px;
+    margin: 0;
+}
+.img-container-2 img {
     box-sizing: border-box;
     display: block;
     width: 100%;
     height: 500px;
     margin: 0;
 }
-
-.img-container-4 img {
+.img-container-3 img {
+    box-sizing: border-box;
     display: none;
     width: 100%;
     height: 500px;
+    margin: 0;
 }
+
+
 
 .dot-container {
     position:absolute;
@@ -146,13 +154,11 @@ body {
     color: snow;
 }
 
-.body{
-    position: relative;
-    top: 100px;
-}
+
 
 .footer{
     position: relative;
+    top: 10000px;
 }
 
 
@@ -179,6 +185,96 @@ body {
     font-size: 400%;
     color: chartreuse;
     opacity: 0;
+}
+.body{
+    position: relative;
+    top: 100px;
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+.trending{
+    position: relative;
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
+.row-1{
+    position: relative;
+    width: 100%;
+    height: 300px;
+}
+.row-2{
+    position: relative;
+    top: 200px;
+    height:300px ;
+}
+.collum-1{
+    position: absolute;
+    width: 30%;
+    left: 3%;
+    margin: auto;
+    box-sizing: border-box;
+    margin-right: 3%;
+    border-radius: 3%;
+    padding: 1% ;
+    box-shadow: 5px 5px 5px grey;
+    background: rgba(130,157,255,0.5);
+}
+.collum-2{
+    position: absolute;
+    width: 30%;
+    left: 36.3%;
+    margin: auto;
+    box-sizing: border-box;
+    margin-right: 3%;
+    border-radius: 3%;
+    padding: 1% ;
+    box-shadow: 5px 5px 5px grey;
+    background: rgba(130,157,255,0.5);
+
+}
+.collum-3{
+    position:absolute;
+    width: 30%;
+    left: 69.6%;
+    margin: auto;
+    box-sizing: border-box;
+    margin-right: 3%;
+    border-radius: 3%;
+    padding: 1% ;
+    box-shadow: 5px 5px 5px grey;
+    background: rgba(130,157,255,0.5);
+}
+.collum-1 img{
+    width: 100%;
+    height: 60%;
+    box-sizing: border-box;
+    border-radius: 2%;
+    box-shadow: 1px 1px 1px 1px grey;
+
+}
+
+.collum-2 img{
+
+    width: 100%;
+    height: 60%;
+    box-sizing: border-box;
+    border-radius: 2%;
+    box-shadow: 1px 1px 1px 1px grey;
+}
+
+.collum-3   img{
+    width: 100%;
+    height: 60%;
+    box-sizing: border-box;
+    border-radius: 2%;
+    box-shadow: 1px 1px 1px 1px grey;
+}
+
+.collum-1:hover ,.collum-3:hover ,.collum-2:hover{
+    cursor: pointer;
 }
 
 
