--- a/home/home.css
+++ b/home/home.css
@@ -7,7 +7,7 @@
 body {
     padding: 0;
     margin: 0;
-    background: white;
+    background: url('../src/background-cement-concrete-242236.jpg');
 }
 
 .header{
@@ -97,9 +97,10 @@ body {
 }
 
 .nav{
-    position: relative;
+    margin-top: 10px;
+    position: sticky;
     display: inline-block;
-    top: 20px;
+    top: 0px;
     width: 100%;
     background: grey;
     overflow: visible;
@@ -108,7 +109,9 @@ body {
     box-sizing: border-box;
     padding-top: 3px;
     padding-left: 3px;
-    background: linear-gradient(to right, hsla(113, 77%, 37%, 0.4),white);
+    background: linear-gradient(to right, hsla(113, 77%, 37%),white);
+    z-index: 1;
+    margin-bottom: -80px;
 
 }
 
@@ -119,7 +122,7 @@ body {
     float: left;
     padding-right: 20px ;
     text-align: center;
-    font-family: "Book Antiqua";
+    font-family: Bahnschrift;
     color: snow;
 
 }
@@ -135,9 +138,9 @@ body {
 
 .hidden-nav{
     display: none;
-    background: linear-gradient(to right, hsla(113, 77%, 37%, 0.4),white);
+    background: linear-gradient(to right, hsla(113, 77%, 37%),white);
     border-radius: 0 0 3% 3%;
-    box-shadow: 0 3px 3px hsla(113, 77%, 37%, 0.4);
+    box-shadow: 0 3px 3px hsla(113, 77%, 37%);
 
 }
 
@@ -152,13 +155,14 @@ body {
     text-decoration:none;
     text-align: left;
     color: snow;
+    font-family: Bahnschrift;
 }
 
 
 
 .footer{
     position: relative;
-    top: 10000px;
+    top: 500px;
 }
 
 
@@ -207,9 +211,10 @@ body {
 }
 .row-2{
     position: relative;
-    top: 200px;
+    top: 100px;
     height:300px ;
 }
+
 .collum-1{
     position: absolute;
     width: 30%;
@@ -217,10 +222,32 @@ body {
     margin: auto;
     box-sizing: border-box;
     margin-right: 3%;
-    border-radius: 3%;
-    padding: 1% ;
-    box-shadow: 5px 5px 5px grey;
+    border-radius: 1%;
+    padding: 0.5% ;
+    box-shadow: 2px 3px 2px grey;
     background: rgba(130,157,255,0.5);
+}
+
+.collum-1 p{
+    font-family: Bahnschrift;
+    text-align: justify;
+    box-sizing: border-box;
+    padding: 2%;
+    margin: 0;
+}
+.collum-2 p{
+    font-family: Bahnschrift;
+    text-align: justify;
+    box-sizing: border-box;
+    padding: 2%;
+    margin: 0;
+}
+.collum-3 p{
+    font-family: Bahnschrift;
+    text-align: justify;
+    box-sizing: border-box;
+    padding: 2%;
+    margin: 0;
 }
 .collum-2{
     position: absolute;
@@ -229,9 +256,9 @@ body {
     margin: auto;
     box-sizing: border-box;
     margin-right: 3%;
-    border-radius: 3%;
-    padding: 1% ;
-    box-shadow: 5px 5px 5px grey;
+    border-radius: 1%;
+    padding: 0.5% ;
+    box-shadow: 2px 3px 2px grey;
     background: rgba(130,157,255,0.5);
 
 }
@@ -242,16 +269,16 @@ body {
     margin: auto;
     box-sizing: border-box;
     margin-right: 3%;
-    border-radius: 3%;
-    padding: 1% ;
-    box-shadow: 5px 5px 5px grey;
+    border-radius: 1%;
+    padding: 0.5% ;
+    box-shadow: 2px 3px 2px grey;
     background: rgba(130,157,255,0.5);
 }
 .collum-1 img{
     width: 100%;
     height: 60%;
     box-sizing: border-box;
-    border-radius: 2%;
+    border-radius: 1%;
     box-shadow: 1px 1px 1px 1px grey;
 
 }
@@ -261,15 +288,15 @@ body {
     width: 100%;
     height: 60%;
     box-sizing: border-box;
-    border-radius: 2%;
-    box-shadow: 1px 1px 1px 1px grey;
+    border-radius: 1%;
+    box-shadow: 2px 3px 2px grey;
 }
 
 .collum-3   img{
     width: 100%;
     height: 60%;
     box-sizing: border-box;
-    border-radius: 2%;
+    border-radius: 1%;
     box-shadow: 1px 1px 1px 1px grey;
 }
 
@@ -277,6 +304,13 @@ body {
     cursor: pointer;
 }
 
-
+.body h1 {
+    background: #8c7095;
+    box-sizing: border-box;
+    margin: 0;
+    margin-bottom: 2%;
+    padding: 0.7%;
+    padding-bottom: 0.5%;
+}
 
 
