--- a/home/home.css
+++ b/home/home.css
@@ -1,316 +1,282 @@
 * {
-    box-sizing: border-box;
-    font-family: Arial;
+  box-sizing: border-box;
+  font-family: Arial;
 }
 
 
 body {
-    padding: 0;
-    margin: 0;
-    background: url('../src/background-cement-concrete-242236.jpg');
+  padding: 0;
+  margin: 0;
+  background: white;
 }
 
 .header{
-    top: 0;
-    padding: 0;
-    margin: 0;
-    position: relative;
-    height: 520px;
+  top: 0;
+  padding: 0;
+  margin: 0;
+  position: relative;
+  height: 520px;
 }
 
 .slide-pic {
-    width: 100%;
-    position: relative;
-    margin: 0;
-    padding: 0;
-    height: 520px;
+  width: 100%;
+  position: relative;
+  margin: 0;
+  padding: 0;
+  height: 520px;
 }
 
 
 
 .img-container-3 , .img-container-1 ,.img-container-2,.img-container-4 {
-    position: absolute;
-    padding: 0;
-    margin: 0;
-    right: 10%;
-    left: 10%;
-    box-sizing: border-box;
-    width: 80%;
-    box-shadow: 0px 3px 3px  gray;
+  position: absolute;
+  padding: 0;
+  margin: 0;
+  right: 10%;
+  left: 10%;
+  box-sizing: border-box;
+  width: 80%;
+  box-shadow: 0px 3px 3px  gray;
 
 }
 .img-container-4 img {
-    box-sizing: border-box;
-    display: none;
-    width: 100%;
-    height: 500px;
-    margin: 0;
+  box-sizing: border-box;
+  display: none;
+  width: 100%;
+  height: 500px;
+  margin: 0;
 }
 .img-container-1 img {
-    box-sizing: border-box;
-    display: none;
-    width: 100%;
-    height: 500px;
-    margin: 0;
+  box-sizing: border-box;
+  display: none;
+  width: 100%;
+  height: 500px;
+  margin: 0;
 }
 .img-container-2 img {
-    box-sizing: border-box;
-    display: block;
-    width: 100%;
-    height: 500px;
-    margin: 0;
+  box-sizing: border-box;
+  display: block;
+  width: 100%;
+  height: 500px;
+  margin: 0;
 }
 .img-container-3 img {
-    box-sizing: border-box;
-    display: none;
-    width: 100%;
-    height: 500px;
-    margin: 0;
+  box-sizing: border-box;
+  display: none;
+  width: 100%;
+  height: 500px;
+  margin: 0;
 }
 
 
 
 .dot-container {
-    position:absolute;
-    top: 505px;
-    left: 45%;
-    width: 10%;
-    display: inline-block;
-    padding-left: 10px;
+  position:absolute;
+  top: 505px;
+  left: 45%;
+  width: 10%;
+  display: inline-block;
+  padding-left: 10px;
 }
 
 .dot {
-    border: gray;
-    background: gray;
-    border-radius: 50%;
-    margin: 1px;
-    display: inline-block;
-    height: 15px;
-    width: 15px;
-    opacity: 0.3;
-    transition: opacity 1s;
+  border: gray;
+  background: gray;
+  border-radius: 50%;
+  margin: 1px;
+  display: inline-block;
+  height: 15px;
+  width: 15px;
+  opacity: 0.3;
+  transition: opacity 1s;
 }
 
 .dot:hover{
-    opacity: 1;
-    cursor: pointer;
+  opacity: 1;
+  cursor: pointer;
 }
 
 .nav{
-    margin-top: 10px;
-    position: sticky;
-    display: inline-block;
-    top: 0px;
-    width: 100%;
-    background: grey;
-    overflow: visible;
-    border-radius: 3px;
-    height: 35px;
-    box-sizing: border-box;
-    padding-top: 3px;
-    padding-left: 3px;
-    background: linear-gradient(to right, hsla(113, 77%, 37%),white);
-    z-index: 1;
-    margin-bottom: -80px;
+  position: relative;
+  display: inline-block;
+  top: 20px;
+  width: 100%;
+  background: grey;
+  overflow: visible;
+  border-radius: 3px;
+  height: 35px;
+  box-sizing: border-box;
+  padding-top: 3px;
+  padding-left: 3px;
+  background: linear-gradient(to right, hsla(113, 77%, 37%, 0.4),white);
 
 }
 
 
 .visiable-nav{
-    display: inline-block;
-    font-size: 25px;
-    float: left;
-    padding-right: 20px ;
-    text-align: center;
-    font-family: Bahnschrift;
-    color: snow;
+  display: inline-block;
+  font-size: 25px;
+  float: left;
+  padding-right: 20px ;
+  text-align: center;
+  font-family: "Book Antiqua";
+  color: snow;
 
 }
 
 .visiable-nav:hover{
-    cursor: pointer;
-    color: #8c7095;
+  cursor: pointer;
+  color: #8c7095;
 }
 
 .visiable-nav:hover .hidden-nav{
-    display: block;
+  display: block;
 }
 
 .hidden-nav{
-    display: none;
-    background: linear-gradient(to right, hsla(113, 77%, 37%),white);
-    border-radius: 0 0 3% 3%;
-    box-shadow: 0 3px 3px hsla(113, 77%, 37%);
+  display: none;
+  background: linear-gradient(to right, hsla(113, 77%, 37%, 0.4),white);
+  border-radius: 0 0 3% 3%;
+  box-shadow: 0 3px 3px hsla(113, 77%, 37%, 0.4);
 
 }
 
 .hidden-nav a:hover{
-    cursor: pointer;
-    color: #8c7095;
+  cursor: pointer;
+  color: #8c7095;
 }
 
 
 .hidden-nav a{
-    display:block;
-    text-decoration:none;
-    text-align: left;
-    color: snow;
-    font-family: Bahnschrift;
+  display:block;
+  text-decoration:none;
+  text-align: left;
+  color: snow;
 }
 
 
 
 .footer{
-    position: relative;
-    top: 500px;
+  position: relative;
+  top: 10000px;
 }
 
 
 .next-pic{
-    right: 2.5%;
-    position: absolute;
-    top: 40%;
-    font-size: 400%;
-    opacity: 0;
-    transition: opacity 1s;
-    color: chartreuse;
+  right: 2.5%;
+  position: absolute;
+  top: 40%;
+  font-size: 400%;
+  opacity: 0;
+  transition: opacity 1s;
+  color: chartreuse;
 }
 .next-pic:hover{
-    opacity: 1;
+  opacity: 1;
 }
 .pre-pic:hover{
-    opacity: 1;
+  opacity: 1;
 }
 .pre-pic{
-    transition: opacity 1s;
-    position: absolute;
-    top: 40%;
-    left: 2.5%;
-    font-size: 400%;
-    color: chartreuse;
-    opacity: 0;
+  transition: opacity 1s;
+  position: absolute;
+  top: 40%;
+  left: 2.5%;
+  font-size: 400%;
+  color: chartreuse;
+  opacity: 0;
 }
 .body{
-    position: relative;
-    top: 100px;
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+  position: relative;
+  top: 100px;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 .trending{
-    position: relative;
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+  position: relative;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
 .row-1{
-    position: relative;
-    width: 100%;
-    height: 300px;
+  position: relative;
+  width: 100%;
+  height: 300px;
 }
 .row-2{
-    position: relative;
-    top: 100px;
-    height:300px ;
+  position: relative;
+  top: 200px;
+  height:300px ;
 }
-
 .collum-1{
-    position: absolute;
-    width: 30%;
-    left: 3%;
-    margin: auto;
-    box-sizing: border-box;
-    margin-right: 3%;
-    border-radius: 1%;
-    padding: 0.5% ;
-    box-shadow: 2px 3px 2px grey;
-    background: rgba(130,157,255,0.5);
-}
-
-.collum-1 p{
-    font-family: Bahnschrift;
-    text-align: justify;
-    box-sizing: border-box;
-    padding: 2%;
-    margin: 0;
-}
-.collum-2 p{
-    font-family: Bahnschrift;
-    text-align: justify;
-    box-sizing: border-box;
-    padding: 2%;
-    margin: 0;
-}
-.collum-3 p{
-    font-family: Bahnschrift;
-    text-align: justify;
-    box-sizing: border-box;
-    padding: 2%;
-    margin: 0;
+  position: absolute;
+  width: 30%;
+  left: 3%;
+  margin: auto;
+  box-sizing: border-box;
+  margin-right: 3%;
+  border-radius: 3%;
+  padding: 1% ;
+  box-shadow: 5px 5px 5px grey;
+  background: rgba(130,157,255,0.5);
 }
 .collum-2{
-    position: absolute;
-    width: 30%;
-    left: 36.3%;
-    margin: auto;
-    box-sizing: border-box;
-    margin-right: 3%;
-    border-radius: 1%;
-    padding: 0.5% ;
-    box-shadow: 2px 3px 2px grey;
-    background: rgba(130,157,255,0.5);
+  position: absolute;
+  width: 30%;
+  left: 36.3%;
+  margin: auto;
+  box-sizing: border-box;
+  margin-right: 3%;
+  border-radius: 3%;
+  padding: 1% ;
+  box-shadow: 5px 5px 5px grey;
+  background: rgba(130,157,255,0.5);
 
 }
 .collum-3{
-    position:absolute;
-    width: 30%;
-    left: 69.6%;
-    margin: auto;
-    box-sizing: border-box;
-    margin-right: 3%;
-    border-radius: 1%;
-    padding: 0.5% ;
-    box-shadow: 2px 3px 2px grey;
-    background: rgba(130,157,255,0.5);
+  position:absolute;
+  width: 30%;
+  left: 69.6%;
+  margin: auto;
+  box-sizing: border-box;
+  margin-right: 3%;
+  border-radius: 3%;
+  padding: 1% ;
+  box-shadow: 5px 5px 5px grey;
+  background: rgba(130,157,255,0.5);
 }
 .collum-1 img{
-    width: 100%;
-    height: 60%;
-    box-sizing: border-box;
-    border-radius: 1%;
-    box-shadow: 1px 1px 1px 1px grey;
+  width: 100%;
+  height: 60%;
+  box-sizing: border-box;
+  border-radius: 2%;
+  box-shadow: 1px 1px 1px 1px grey;
 
 }
 
 .collum-2 img{
 
-    width: 100%;
-    height: 60%;
-    box-sizing: border-box;
-    border-radius: 1%;
-    box-shadow: 2px 3px 2px grey;
+  width: 100%;
+  height: 60%;
+  box-sizing: border-box;
+  border-radius: 2%;
+  box-shadow: 1px 1px 1px 1px grey;
 }
 
 .collum-3   img{
-    width: 100%;
-    height: 60%;
-    box-sizing: border-box;
-    border-radius: 1%;
-    box-shadow: 1px 1px 1px 1px grey;
+  width: 100%;
+  height: 60%;
+  box-sizing: border-box;
+  border-radius: 2%;
+  box-shadow: 1px 1px 1px 1px grey;
 }
 
 .collum-1:hover ,.collum-3:hover ,.collum-2:hover{
-    cursor: pointer;
+  cursor: pointer;
 }
 
-.body h1 {
-    background: #8c7095;
-    box-sizing: border-box;
-    margin: 0;
-    margin-bottom: 2%;
-    padding: 0.7%;
-    padding-bottom: 0.5%;
-}
+
 
 
